--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "layershifter/domain-extract",
+  "name": "qwddz/domain-extractor",
   "type": "library",
   "minimum-stability": "stable",
   "license": "Apache-2.0",
